@@ -1,3 +1,8 @@
+Tue Jun  7 18:30:04 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (create_makefile): add .SUFFIXES from depend file.
+	  fixed: [ruby-dev:26294]
+
 Tue Jun  7 17:20:39 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* parse.y (parser_yylex): allow ';;' to be block terminator in
@@ -45,7 +50,7 @@ Sat Jun  4 14:55:18 2005  Tanaka Akira  <akr@m17n.org>
 	* test/dbm/test_dbm.rb: merged from ext/dbm/testdbm.rb.
 
 	* test/gdbm/test_gdbm.rb: merged from ext/gdbm/testgdbm.rb.
-	  
+
 	* test/sdbm/test_sdbm.rb: renamed from ext/sdbm/testsdbm.rb with
 	  modification to use test/unit.
 
